<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="Typos">
    <string name="app_name">RentalManager</string>
    <string name="bill_title">\u0048\u00F3\u0061\u0020\u0111\u01A1\u006E</string>
    <string name="bill_generate_bulk">\u0054\u1EA1\u006F\u0020\u0068\u00E0\u006E\u0067\u0020\u006C\u006F\u1EA1\u0074</string>
    <string name="bill_create_single">\u0047\u0068\u0069\u0020\u006C\u1EBB</string>
    <string name="bill_search_hint">\u0054\u00EC\u006D\u0020\u0074\u0068\u0065\u006F\u0020\u0074\u0068\u00E1\u006E\u0067\u002C\u0020\u0073\u1ED1\u0020\u0070\u0068\u00F2\u006E\u0067\u002E\u002E\u002E</string>
    <string name="bill_filter_all">\u0054\u1EA5\u0074\u0020\u0063\u1EA3</string>
    <string name="bill_filter_unpaid">\u0043\u0068\u01B0\u0061\u0020\u0074\u0072\u1EA3</string>
    <string name="bill_filter_partial">\u0054\u0068\u0069\u1EBF\u0075</string>
    <string name="bill_filter_paid">Đã trả</string>
    <string name="bill_form_title">\u0047\u0068\u0069\u0020\u006C\u1EBB\u0020\u0068\u00F3\u0061\u0020\u0111\u01A1\u006E</string>
    <string name="bill_due_label_default">\u0048\u1EA1\u006E\u003A\u0020\u0063\u0068\u01B0\u0061\u0020\u0063\u0068\u1ECD\u006E</string>
    <string name="bill_item_view_detail">\u0043\u0068\u0069\u0020\u0074\u0069\u1EBF\u0074</string>
    <string name="bill_item_pay">\u0054\u0068\u0075\u0020\u0074\u0069\u1EC1\u006E</string>
    <string name="bill_detail_title">\u0043\u0068\u0069\u0020\u0074\u0069\u1EBF\u0074\u0020\u0068\u00F3\u0061\u0020\u0111\u01A1\u006E</string>
    <string name="bill_detail_electric">\u0110\u0069\u1EC7\u006E</string>
    <string name="bill_detail_water">\u004E\u01B0\u1EDB\u0063</string>
    <string name="bill_detail_rent">\u0054\u0069\u1EC1\u006E\u0020\u0070\u0068\u00F2\u006E\u0067</string>
    <string name="bill_detail_service_fee">\u0050\u0068\u00ED\u0020\u0064\u1ECB\u0063\u0068\u0020\u0076\u1EE5</string>
    <string name="bill_detail_total">\u0054\u1ED5\u006E\u0067\u0020\u0063\u1ED9\u006E\u0067</string>
    <string name="bill_qr_create">\u0054\u1EA1\u006F\u0020\u0051\u0052\u0020\u0074\u0068\u0061\u006E\u0068\u0020\u0074\u006F\u00E1\u006E</string>
    <string name="bill_qr_desc">\u004D\u00E3\u0020\u0056\u0069\u0065\u0074\u0051\u0052</string>
    <string name="bill_qr_note">\u0051\u0075\u00E9\u0074\u0020\u006D\u00E3\u0020\u0062\u1EB1\u006E\u0067\u0020\u0061\u0070\u0070\u0020\u006E\u0067\u00E2\u006E\u0020\u0068\u00E0\u006E\u0067\u0020\u0111\u1EC3\u0020\u0074\u0068\u0061\u006E\u0068\u0020\u0074\u006F\u00E1\u006E</string>
    <string name="bill_qr_hide">\u1EA8\u006E\u0020\u006D\u00E3\u0020\u0051\u0052</string>
    <string name="bill_no_active_contract">\u004B\u0068\u00F4\u006E\u0067\u0020\u0063\u00F3\u0020\u0068\u1EE3\u0070\u0020\u0111\u1ED3\u006E\u0067\u0020\u0068\u0069\u1EC7\u0075\u0020\u006C\u1EF1\u0063</string>
    <string name="bill_no_contract_to_create">\u004B\u0068\u00F4\u006E\u0067\u0020\u0063\u00F3\u0020\u0068\u1EE3\u0070\u0020\u0111\u1ED3\u006E\u0067\u0020\u0111\u1EC3\u0020\u0074\u1EA1\u006F\u0020\u0068\u00F3\u0061\u0020\u0111\u01A1\u006E</string>
    <string name="bill_fill_all_info">\u0056\u0075\u0069\u0020\u006C\u00F2\u006E\u0067\u0020\u006E\u0068\u1EAD\u0070\u0020\u0111\u1EA7\u0079\u0020\u0111\u1EE7\u0020\u0074\u0068\u00F4\u006E\u0067\u0020\u0074\u0069\u006E</string>
    <string name="bill_old_electric_prefix">\u0110\u0069\u1EC7\u006E\u0020\u0063\u0169\u003A\u0020</string>
    <string name="bill_old_water_prefix">\u004E\u01B0\u1EDB\u0063\u0020\u0063\u0169\u003A\u0020</string>
    <string name="bill_input_meter_title">\u004E\u0068\u1EAD\u0070\u0020\u0063\u0068\u1EC9\u0020\u0073\u1ED1\u0020\u0111\u0069\u1EC7\u006E\u0020\u006E\u01B0\u1EDB\u0063</string>
    <string name="bill_update">\u0043\u1EAD\u0070\u0020\u006E\u0068\u1EAD\u0074</string>
    <string name="bill_cancel">\u0048\u1EE7\u0079</string>
    <string name="bill_input_full_meter">\u004E\u0068\u1EAD\u0070\u0020\u0111\u1EA7\u0079\u0020\u0111\u1EE7\u0020\u0063\u0068\u1EC9\u0020\u0073\u1ED1</string>
    <string name="bill_new_meter_must_be_greater">\u0043\u0068\u1EC9\u0020\u0073\u1ED1\u0020\u006D\u1EDB\u0069\u0020\u0070\u0068\u1EA3\u0069\u0020\u006C\u1EDB\u006E\u0020\u0068\u01A1\u006E\u0020\u0063\u0068\u1EC9\u0020\u0073\u1ED1\u0020\u0063\u0169</string>
    <string name="bill_input_payment_title">\u004E\u0068\u1EAD\u0070\u0020\u0073\u1ED1\u0020\u0074\u0069\u1EC1\u006E\u0020\u006B\u0068\u00E1\u0063\u0068\u0020\u0074\u0072\u1EA3</string>
    <string name="bill_confirm">\u0058\u00E1\u0063\u0020\u006E\u0068\u1EAD\u006E</string>
    <string name="bill_input_amount">\u004E\u0068\u1EAD\u0070\u0020\u0073\u1ED1\u0020\u0074\u0069\u1EC1\u006E</string>
    <string name="bill_detail_title_prefix">\u0043\u0068\u0069\u0020\u0074\u0069\u1EBF\u0074\u0020\u0068\u00F3\u0061\u0020\u0111\u01A1\u006E\u0020</string>
    <string name="bill_share">\u0043\u0068\u0069\u0061\u0020\u0073\u1EBB</string>
    <string name="bill_input_month_title">\u004E\u0068\u1EAD\u0070\u0020\u0074\u0068\u00E1\u006E\u0067\u0020\u0074\u1EA1\u006F\u0020\u0068\u00F3\u0061\u0020\u0111\u01A1\u006E</string>
    <string name="bill_create">\u0054\u1EA1\u006F</string>
    <string name="bill_input_month_required">\u0056\u0075\u0069\u0020\u006C\u00F2\u006E\u0067\u0020\u006E\u0068\u1EAD\u0070\u0020\u0074\u0068\u00E1\u006E\u0067</string>
    <string name="close">\u0110\u00F3\u006E\u0067</string>
</resources>
